--- a/src/interfaces/main_view.glade
+++ b/src/interfaces/main_view.glade
@@ -19,8 +19,9 @@
       </row>
     </data>
   </object>
-  <object class="GtkWindow" id="window1">
+  <object class="GtkWindow" id="main_view">
     <property name="can_focus">False</property>
+    <signal name="destroy" handler="on_main_view_destroy" swapped="no"/>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
