--- a/src/interfaces/main_view.glade
+++ b/src/interfaces/main_view.glade
@@ -206,13 +206,14 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkToolButton" id="toolbutton1">
+                      <object class="GtkToolButton" id="new_client">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_action_appearance">False</property>
                         <property name="label" translatable="yes">new</property>
                         <property name="use_underline">True</property>
                         <property name="stock_id">gtk-new</property>
+                        <signal name="clicked" handler="on_new_client_clicked" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
