--- a/src/interfaces/client_view.glade
+++ b/src/interfaces/client_view.glade
@@ -3,6 +3,7 @@
   <requires lib="gtk+" version="2.24"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="client_info">
+    <property name="width_request">400</property>
     <property name="can_focus">False</property>
     <signal name="destroy" handler="on_client_info_destroy" swapped="no"/>
     <child>
