--- a/src/interfaces/main_view.glade
+++ b/src/interfaces/main_view.glade
@@ -13,6 +13,7 @@
     </columns>
   </object>
   <object class="GtkWindow" id="main_view">
+    <property name="width_request">800</property>
     <property name="can_focus">False</property>
     <signal name="destroy" handler="on_main_view_destroy" swapped="no"/>
     <child>
