--- a/ordenley/views/interfaces/main_view.glade
+++ b/ordenley/views/interfaces/main_view.glade
@@ -81,6 +81,7 @@
                         <property name="use_action_appearance">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="gtk_main_quit" swapped="no"/>
                       </object>
                     </child>
                   </object>
