--- a/ordenley/views/interfaces/main_view.glade
+++ b/ordenley/views/interfaces/main_view.glade
@@ -5,6 +5,8 @@
   <object class="GtkWindow" id="Ord-en Ley">
     <property name="width_request">800</property>
     <property name="can_focus">False</property>
+    <property name="default_width">800</property>
+    <property name="default_height">600</property>
     <signal name="destroy" handler="on_main_view_destroy" swapped="no"/>
     <child>
       <object class="GtkVBox" id="vbox1">
@@ -221,42 +223,52 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkTreeView" id="client_tree">
+                  <object class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="model">client_store</property>
-                    <signal name="row-activated" handler="on_client_tree_row_activated" swapped="no"/>
-                    <signal name="select-cursor-row" handler="gtk_main_quit" swapped="no"/>
+                    <property name="hscrollbar_policy">automatic</property>
+                    <property name="vscrollbar_policy">automatic</property>
                     <child>
-                      <object class="GtkTreeViewColumn" id="name_column">
-                        <property name="title" translatable="yes">Name</property>
+                      <object class="GtkTreeView" id="client_tree">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="model">client_store</property>
+                        <property name="headers_clickable">False</property>
+                        <property name="search_column">0</property>
+                        <signal name="row-activated" handler="on_client_tree_row_activated" swapped="no"/>
+                        <signal name="select-cursor-row" handler="gtk_main_quit" swapped="no"/>
                         <child>
-                          <object class="GtkCellRendererText" id="name_cell"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
+                          <object class="GtkTreeViewColumn" id="name_column">
+                            <property name="title" translatable="yes">Name</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="name_cell"/>
+                              <attributes>
+                                <attribute name="text">0</attribute>
+                              </attributes>
+                            </child>
+                          </object>
                         </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkTreeViewColumn" id="surname_column">
-                        <property name="title" translatable="yes">Surname</property>
                         <child>
-                          <object class="GtkCellRendererText" id="surname_cell"/>
-                          <attributes>
-                            <attribute name="text">1</attribute>
-                          </attributes>
+                          <object class="GtkTreeViewColumn" id="surname_column">
+                            <property name="title" translatable="yes">Surname</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="surname_cell"/>
+                              <attributes>
+                                <attribute name="text">1</attribute>
+                              </attributes>
+                            </child>
+                          </object>
                         </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkTreeViewColumn" id="dni_column">
-                        <property name="title" translatable="yes">DNI</property>
                         <child>
-                          <object class="GtkCellRendererText" id="dni_cell"/>
-                          <attributes>
-                            <attribute name="text">2</attribute>
-                          </attributes>
+                          <object class="GtkTreeViewColumn" id="dni_column">
+                            <property name="title" translatable="yes">DNI</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="dni_cell"/>
+                              <attributes>
+                                <attribute name="text">2</attribute>
+                              </attributes>
+                            </child>
+                          </object>
                         </child>
                       </object>
                     </child>
